# odoo-weaviate-integration

./: README.md
docker/: .env.example  .gitignore  Dockerfile  docker-compose.yml  odoo.conf
odoo-week/: index.html
product_weaviate_search/: README.md  README.rst  __init__.py  __manifest__.py  pyproject.toml
product_weaviate_search/controllers/: __init__.py  website_sale.py
product_weaviate_search/data/: ir_config_parameter_data.xml
product_weaviate_search/demo/: ir_config_parameter_demo.xml
product_weaviate_search/models/: __init__.py  product_template.py  res_config_settings.py
product_weaviate_search/readme/: DESCRIPTION.rst  INSTALL.rst  USAGE.rst
product_weaviate_search/security/: ir.model.access.csv  product_weaviate_security.xml
product_weaviate_search/services/: __init__.py  weaviate_service.py
product_weaviate_search/tests/: __init__.py  common.py  test_backend_search.py  test_product_sync.py  test_weaviate_service.py
product_weaviate_search/views/: product_template_views.xml  res_config_settings_view.xml
product_weaviate_search/wizard/: __init__.py  product_weaviate_sync_wizard.py  product_weaviate_sync_wizard_view.xml
