[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = [".."]
include = ["product_weaviate_search*"]

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]
